--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "truffle-contract": "^3.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "vuetify": "^1.0.5"
+    "vuetify": "^1.0.5",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
