--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "web3": "1.0.0-beta.33",
+    "truffle": "4.1.5",
     "truffle-contract": "^3.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
