--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "web3": "1.0.0-beta.33",
+    "fuzzysearch": "^1.0.3",
     "truffle": "4.1.5",
     "truffle-contract": "^3.0.0",
     "vue": "^2.5.13",
     "vue-router": "^2.7.0",
     "vuetify": "^1.0.13",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "web3": "1.0.0-beta.33"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
