--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fuzzysearch": "^1.0.3",
     "truffle": "4.1.5",
     "truffle-contract": "^3.0.0",
+    "truffle-hdwallet-provider": "0.0.5",
     "vue": "^2.5.13",
     "vue-router": "^2.7.0",
     "vuetify": "^1.0.13",
